# lambda-report-issue-reproduction

./: .gitignore  Makefile  README.md  template.yaml
extension/: Cargo.toml  rust-toolchain.toml  rustfmt.toml
extension/src/: main.rs
function/: package-lock.json  package.json
function/src/: app.js
