[package]
name = "lambda-report-issue-reproduction"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lambda-report-issue-reproduction"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.29.0", features = ["full", "tracing", "time", "sync"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
lambda-extension = "0.9.0"
